--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,7 @@ repos:
         entry: ./scripts/merge-dicts.sh
         language: script
 # This one requires package ``hunspell-es_es`` in Archlinux
--   repo: https://github.com/JulienPalard/pospell
+-   repo: https://github.com/AFPy/pospell
     rev: v1.0.11
     hooks:
     -   id: pospell
