Actualizado CI con nuevo script 'create_dict.py'.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         run: powrap --check --quiet **/*.po
       - name: Pospell
         run: |
-          awk 1 dict dictionaries/*.txt > dict.txt
+          python scripts/create_dict.py
           pospell -p dict.txt -l es_AR -l es_ES **/*.po
       - name: Construir documentación
         run: PYTHONWARNINGS=ignore::FutureWarning sphinx-build -j auto -W --keep-going -b html -d cpython/Doc/_build/doctree -D language=es . cpython/Doc/_build/html
