--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,10 @@ name: Test
 
 on:
   push:
-    branches:
-      - 3.*
+    #branches:
+    #  - 3.*
   pull_request:
+  workflow_dispatch:
 
 jobs:
   test:
