Apply suggestions from code review
Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

--- a/.github/ladybug.yml
+++ b/.github/ladybug.yml
@@ -33,7 +33,7 @@ scheduled_tasks:
     add_labels: "waiting for review"
     comment: >
       "Hola @${ASSIGNEE}. Este PR lleva unos días esperando que revises 
-      comentariosque alguién solicitó en un review.\n 
+      comentarios que alguién solicitó en un review.\n 
       Por favor avisanos si necesitas ayuda (podes encontrarnos en nuestro Telegram)
       o si tenes algún problema para continuar."
   pr_timeout:
@@ -45,4 +45,4 @@ scheduled_tasks:
     comment: >
       "Hola @${ASSIGNEE}. Vamos a pedir a une admin de nuestro equipo que decida 
       si alguien más puede finalizar este PR o si tenemos que cancelarlo.\n 
-      Por favor avisanos en caso de que puedas tomarte le tiempo para terminarlo."
+      Por favor avísanos en caso de que puedas tomarte el tiempo para terminarlo."
