--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,11 +10,11 @@ sphinx:
   configuration: conf.py
 
 build:
-  image: latest
+  image: testing
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-  version: 3.8
+  version: 3.9
   install:
     - requirements: requirements.txt
 
