Optimizada sincronización con CPython en CI (#1186)
Co-authored-by: Cristián Maureira-Fredes <Cristian.Maureira-Fredes@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,7 @@ jobs:
           python-version: 3.9
       - name: Sincronizar con CPython
         run: |
-          git submodule sync
-          git submodule update --init --force cpython
+          git submodule update --init --depth=1 cpython
       - name: Instalar dependencias
         run: |
           sudo apt-get update
