avance traducción typing.po

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 -   repo: https://github.com/JulienPalard/powrap
-    rev: master
+    rev: main
     hooks:
     -   id: powrap
 -   repo: local
