Update CI (RTD and GH Actions) to run Python 3.10

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Preparar Python v3.9
+      - name: Preparar Python v3.10
         uses: actions/setup-python@v2
         with:
-          python-version: 3.9
+          python-version: "3.10"
       - name: Sincronizar con CPython
         run: |
           git submodule update --init --depth=1 cpython
