--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,11 +10,13 @@ sphinx:
   configuration: conf.py
 
 build:
-  image: testing
+  os: ubuntu-20.04
+  tools:
+    python: "3.10"
+
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-  version: 3.9
   install:
     - requirements: requirements.txt
 
