Cambia GitHub workflows, Makefile y pre-commit hooks para usar check_spell.py
En el caseo del workflow de GitHub y del Makefile, el cambio es simple:
basta con sustituir la invocación a los dos scripts anteriores por el
nuevo y ya todo funciona.

En el caso de pre-commit, podemos sacar el hook que corre pospell
directamente, y en cambio declrar el paquete pospell como una
dependencia aditional del nuestro hook local que ahora corre
check_spell.py directamente.

Signed-off-by: Rodrigo Tobar <rtobar@icrar.org>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,6 @@ jobs:
         run: powrap --check --quiet **/*.po
       - name: Pospell
         run: |
-          python scripts/create_dict.py
-          pospell -p dict.txt -l es_ES **/*.po
+          python scripts/check_spell.py
       - name: Construir documentación
         run: PYTHONWARNINGS=ignore::FutureWarning sphinx-build -j auto -W --keep-going -b html -d cpython/Doc/_build/doctree -D language=es . cpython/Doc/_build/html
