Agrega paso a CI para chequear orden en TRANSLATORS
Cuando nueva gente se agregue a sí misma a la lista de autores en
TRANSLATORS, este nuevo paso en GitHub actions corroborará que el
archivo TRANSLATORS sigue estando ordenado alfabéticamente, y generará
un error de no ser éste el caso.

Signed-off-by: Rodrigo Tobar <rtobar@icrar.org>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,14 @@ jobs:
       - name: Instalar dependencias
         run: |
           sudo apt-get update
-          sudo apt-get install -y hunspell hunspell-es gettext
+          sudo apt-get install -y hunspell hunspell-es gettext language-pack-es
           python -m pip install -r requirements.txt
           pip list
           pospell --version
           powrap --version
+      - name: TRANSLATORS
+        run: |
+          diff -Naur TRANSLATORS <(LANG=es python scripts/sort.py < TRANSLATORS)
       - name: Powrap
         run: powrap --check --quiet **/*.po
       - name: Pospell
