fix: execute only on PR

--- a/.github/workflows/pospell.yml
+++ b/.github/workflows/pospell.yml
@@ -8,7 +8,9 @@ jobs:
   fix-spell:
     name: Fix spelling
     runs-on: ubuntu-latest
-    if: ${{ github.event.comment.body == 'pospell-fix'}}
+    if: |
+      github.event.comment.body == 'pospell-fix'
+      && github.event.issue.pull_request
     steps:
       - name: Confirm process
         uses: actions/github-script@v6
