--- a/.github/workflows/pospell.yml
+++ b/.github/workflows/pospell.yml
@@ -23,11 +23,12 @@ jobs:
               comment_id: context.payload.comment.id,
               content: "+1",
             });
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Preparar Python v3.10
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+          cache: 'pip'
       - name: Instalar dependencias
         run: |
           sudo apt-get update
