--- a/.github/workflows/pospell.yml
+++ b/.github/workflows/pospell.yml
@@ -2,15 +2,14 @@ name: pospell
 on:
   issue_comment:
     types:
+      - edited
       - created
 
 jobs:
   fix-spell:
     name: Fix spelling
     runs-on: ubuntu-latest
-    if: |
-      github.event.comment.body == 'pospell-fix'
-      && github.event.issue.pull_request
+    if: ${{ github.event.issue.pull_request && github.event.comment.body == 'pospell-fix' }}
     steps:
       - name: Confirm process
         uses: actions/github-script@v6
@@ -28,7 +27,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-          cache: 'pip'
+          cache: "pip"
       - name: Instalar dependencias
         run: |
           sudo apt-get update
