--- a/.github/workflows/pospell-on-demand.yml
+++ b/.github/workflows/pospell-on-demand.yml
@@ -18,7 +18,7 @@ jobs:
             -X POST \
             -d '{"content":"+1"}' \
             -H "Accept: application/vnd.github.squirrel-girl-preview+json" \
-            -H "Authorization: token ${{github.token}}"
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}"
       - uses: actions/checkout@v3
       - name: Preparar Python v3.10
         uses: actions/setup-python@v4
