--- a/.github/workflows/pospell-on-demand.yml
+++ b/.github/workflows/pospell-on-demand.yml
@@ -9,7 +9,7 @@ jobs:
   fix-spell:
     name: Fix spelling
     runs-on: ubuntu-latest
-    if: ${{ github.event.issue.pull_request && github.event.comment.body == 'pospell-fix' }}
+    if: ${{ github.event.issue.pull_request && github.event.comment.body == 'powrap-fix' }}
     steps:
       - name: Confirmar ejecucion
         continue-on-error: true
