rollback to previous commit action

--- a/.github/workflows/execute-powrap.yml
+++ b/.github/workflows/execute-powrap.yml
@@ -1,4 +1,5 @@
 name: Ejecuta powrap
+
 on:
   issue_comment:
     types:
@@ -34,6 +35,7 @@ jobs:
       - name: Ejecutar Powrap
         run: powrap --quiet **/*.po
       - name: Commit & Push changes
-        uses: stefanzweifel/git-auto-commit-action@v4
+        uses: actions-js/push@master
         with:
-          commit_message: "auto: spell check"
+          message: "auto: spell check"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
