--- a/.github/workflows/execute-powrap.yml
+++ b/.github/workflows/execute-powrap.yml
@@ -38,4 +38,5 @@ jobs:
         uses: actions-js/push@master
         with:
           message: "auto: spell check"
+          branch: ${GITHUB_REF##*/}
           github_token: ${{ secrets.GITHUB_TOKEN }}
