--- a/.github/workflows/execute-powrap.yml
+++ b/.github/workflows/execute-powrap.yml
@@ -38,5 +38,5 @@ jobs:
         uses: actions-js/push@master
         with:
           message: "auto: spell check"
-          branch: ${{ github.ref }}
+          branch: ${{ github.head_ref }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
