--- a/.github/workflows/execute-powrap.yml
+++ b/.github/workflows/execute-powrap.yml
@@ -7,8 +7,8 @@ on:
       - created
 
 jobs:
-  fix-spell:
-    name: Fix spelling
+  ejecutar-powrap:
+    name: Revisa y repara el formato con Powrap
     runs-on: ubuntu-latest
     if: ${{ github.event.issue.pull_request && github.event.comment.body == 'powrap-fix' }}
     steps:
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: awalsh128/cache-apt-pkgs-action@latest
         with:
-          packages: hunspell hunspell-es gettext
+          packages: gettext
           version: 1.0
       - name: Preparar Python v3.10
         uses: actions/setup-python@v4
@@ -31,7 +31,7 @@ jobs:
           python-version: "3.10"
           cache: "pip"
       - name: Instalar dependencias
-        run: python -m pip install -r requirements.txt
+        run: python -m pip install powrap
       - name: Ejecutar Powrap
         run: powrap --quiet **/*.po
       - name: Commit & Push changes
