--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 pip
 Sphinx==4.5.0
 blurb
-Pygments<2.15
+Pygments==2.16.1
 PyICU
 polib
 pospell>=1.1
 potodo
 powrap
-python-docs-theme
+python-docs-theme>=2022.1
 setuptools
 sphinx-intl
 pre-commit
 sphinx-autorun
 sphinxemoji
 sphinx-tabs
-sphinx-lint==0.6.7
+sphinx-lint==0.7.0
 tabulate
